--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
-streamlit
-scapy
-pandas
+# Core Framework
+streamlit>=1.28.0
+streamlit-option-menu>=0.3.2
+
+# Data Processing
+scapy>=2.4.5
+pandas>=1.0
+numpy>=1.21.0
+
+# Visualization
+matplotlib>=3.3.0
+plotly>=5.0.0
+
+# APIs
+requests>=2.25.0
+
+# Utilities
+python-dotenv>=0.19.0
